<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="obessonov.com.revisor.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDocuments"
        android:text="@string/btnDocumentsCaption" />

    <Button
        android:text="@string/btnSettingCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSetting" />

    <Button
        android:text="Parsing file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnParse" />

    <Button
        android:text="Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDDD" />

    <Button
        android:text="@string/btnLoadCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2" />

    <Button
        android:text="TEST"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnTest" />

</LinearLayout>
